--- a/mulesoft/ci-cd-project/pom.xml
+++ b/mulesoft/ci-cd-project/pom.xml
@@ -36,6 +36,9 @@
 						<applicationName>${project.artifactId}</applicationName>
 						<workers>1</workers>
 						<workerType>MICRO</workerType>
+						<properties>
+                             <env>${env}</env>
+                         </properties>
 					</cloudHubDeployment>
 				</configuration>
 			</plugin>
