--- a/mulesoft/ci-cd-project/pom.xml
+++ b/mulesoft/ci-cd-project/pom.xml
@@ -37,7 +37,7 @@
 						<workers>1</workers>
 						<workerType>MICRO</workerType>
 						<properties>
-                             <env1>${env}</env1>
+                             <env>${env}</env>
                          </properties>
 					</cloudHubDeployment>
 				</configuration>
