--- a/mulesoft/pom.xml
+++ b/mulesoft/pom.xml
@@ -47,11 +47,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
    <distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
-			<url>https://oss.abc.com</url>
+			<url>file:///home/mulesoft/.m2/repository</url>
 		</snapshotRepository>
 		<repository>
 			<id>ossrh</id>
-			<url>https://abc.com</url>
+			<url>file:///home/mulesoft/.m2/repository</url>
 		</repository>
 	</distributionManagement>
 	
