--- a/mulesoft/pom.xml
+++ b/mulesoft/pom.xml
@@ -47,6 +47,14 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		</plugins>
 	</build>
 	
+	<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-deploy-plugin</artifactId>
+  <configuration>
+    <skip>true</skip>
+  </configuration>
+</plugin>
+	
    <distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
