--- a/mulesoft/pom.xml
+++ b/mulesoft/pom.xml
@@ -40,6 +40,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 						<workerType>MICRO</workerType>
 						<properties>
                              <env>${env}</env>
+							 <key>${key}</key>
                          </properties>
 					</cloudHubDeployment>
 				</configuration>
