--- a/mulesoft/pom.xml
+++ b/mulesoft/pom.xml
@@ -35,7 +35,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 						<password>${anypoint.password}</password>
 						<muleVersion>4.1.3</muleVersion>
 						<environment>Sandbox</environment>
-						<applicationName>${project.artifactId}</applicationName>
+						<applicationName>vishal-${project.artifactId}</applicationName>
+						<artifact>${artifactPath}</artifact>
 						<workers>1</workers>
 						<workerType>MICRO</workerType>
 						<properties>
